--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -1,7 +1,16 @@
 ---
-layout: default
+layout: page
 title: 你好，世界
 ---
 　　<h2>{{ page.title }}</h2>
 　　<p>我的第一篇文章</p>
 　　<p>{{ page.date | date_to_string }}</p>
+    <pre class="prettyprint">
+  class Voila {
+    public:
+    // Voila
+      static const string VOILA = "Voila";
+
+      // will not interfere with embedded tags.
+  }
+    </pre>
