--- a/_posts/2013-04-15-Hello-My-Baby.html
+++ b/_posts/2013-04-15-Hello-My-Baby.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: 你好，我的儿子
+layout: page
+title: My Baby
 ---
 　　<h2>{{ page.title }}</h2>
 　　<p> 从上周五开始，废了小一点功夫，这个基于Github Pages搭建的个人Blog终于启动了。发此文以示纪念。</p>
