--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
-layout: default
-title: Good Bai
+layout: page
 ---
-　　<h2>{{ page.title }}</h2>
+　　<h2>{{ site.blogname }}</h2>
 　　<p>最新文章</p>
 　　<ul>
 　　　　{% for post in site.posts %}
