added page style CSS,Maybe is BEAT1

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout:         default
-title:          出错啦！
+title:          404_Error
 ---
-<h1>出错啦,一定是输入的地址有问题。</h1>
+<p>出错啦,一定是输入的地址有问题。</p>
 
