--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -1,6 +1,15 @@
 ---
 layout: post
 title: 你好，世界
+description: ""
+category: Workflow
+tags: [Jekyll, Workflow]
+sharing: true
+comments: true
+robots: index,follow
+alias: [/lessons/2012/1/20/jekyll-introduction/index.html]
+date: 22 January 2013
+published: true
 ---
 　　<h2>{{ page.title }}</h2>
 　　<p>我的第一篇文章</p>
@@ -14,3 +23,5 @@ title: 你好，世界
       // will not interfere with embedded tags.
   }
     </pre>
+
+<img src="https://www.dropbox.com/s/o6muxi0q19iataa/%E9%9C%80%E6%B1%82%E7%90%86%E8%A7%A3%E8%AF%AF%E5%8C%BA%E5%9B%BE%E7%A4%BA.png"/>
