--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Goodbai Blog
 ---
 　　<p>最新文章</p>
 　　<ul>
@@ -8,10 +9,3 @@ layout: default
 　　　　{% endfor %}
 　　</ul>
 　　
-　　{% highlight java %}
-public class HelloWorld {
-    public static void main(String args[]) {
-      System.out.println("Hello World!");
-    }
-}
-{% endhighlight %}
