update style.css and default.html from 3dd, other a lot config

--- a/_posts/2012-08-25-hello-world.html
+++ b/_posts/2012-08-25-hello-world.html
@@ -1,15 +1,18 @@
 ---
 layout: post
-title: 你好，世界
-description: ""
-category: Workflow
+title: 你好，世界(这是一篇测试文章）
+category: test
 tags: [Jekyll, Workflow]
 sharing: true
-comments: true
-robots: index,follow
+comment: true
+robot: index,follow
 alias: [/lessons/2012/1/20/jekyll-introduction/index.html]
 date: 22 January 2013
 published: true
+highlight: yes
+description: "测试描述，看不好好的的的，我们都是中国人额\
+shib弟弟你的你的你恩呢你你你你你你的你你你\
+ddddddddddddddddddddddddddddddddddddddddddddd"
 ---
 　　<h2>{{ page.title }}</h2>
 　　<p>我的第一篇文章</p>
@@ -24,4 +27,3 @@ published: true
   }
     </pre>
 
-<img src="https://www.dropbox.com/s/o6muxi0q19iataa/%E9%9C%80%E6%B1%82%E7%90%86%E8%A7%A3%E8%AF%AF%E5%8C%BA%E5%9B%BE%E7%A4%BA.png"/>
