--- a/404.html
+++ b/404.html
@@ -1,6 +1,11 @@
 ---
-layout:         default
-title:          404_Error
+layout: default
+title: 访问的页面不存在 
 ---
-<p>出错啦,一定是输入的地址有问题。</p>
-
+<br>
+<br>
+<br>
+<h3>访问的页面不存在，返回<a href="/index.html"> 首页 </a></h3>
+<br>
+<br>
+<br>
