--- a/_posts/2013-04-15-Hello-My-Baby.html
+++ b/_posts/2013-04-15-Hello-My-Baby.html
@@ -1,6 +1,18 @@
 ---
 layout: post
-title: My Baby
+title: 第一篇博文 
+category: test
+tags: [Jekyll, Workflow]
+sharing: true
+comment: true
+robot: index,follow
+alias: [/lessons/2012/1/20/jekyll-introduction/index.html]
+date: 22 January 2013
+published: true 
+highlightno: yes
+description: "测试描述，看不好好的的的，我们都是中国人额\
+shib弟弟你的你的你恩呢你你你你你你的你你你\
+ddddddddddddddddddddddddddddddddddddddddddddd"
 ---
 　　<h2>{{ page.title }}</h2>
 　　<p> 从上周五开始，废了小一点功夫，这个基于Github Pages搭建的个人Blog终于启动了。发此文以示纪念。</p>
