--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 keyword: goodbai
 title: Goodbai Blog
 ---
-　　<h1>最新文章</h1>
+　　<h1>文章列表</h1>
  <div id="bloglist" class="bloglist">
 　　<ul>
 　　　　{% for post in site.posts %}
