about.html first version

--- a/about.html
+++ b/about.html
@@ -1,11 +1,41 @@
 ---
-layout: default
-title: 访问的页面不存在 
+layout: page
+title: About Goodbai 
+category: about
+tags: [关于Goodbai]
+sharing: false
+comment: true
+published: true 
+highlightno: no
+description: ""
+date: 15 April 2013
 ---
-<br>
-<br>
-<br>
-<h3>访问的页面不存在，返回<a href="/index.html"> 首页 </a></h3>
-<br>
-<br>
-<br>
+
+
+<div id="mebox">
+	<div id="melogo">
+	<img src="/images/melogo-100.png" width="150">
+	</div>
+
+	<div id="meinfo" >
+		<ul>
+		<li>新浪微博：<a href="http://weibo.com/baigood">GoodbaiA</a></li>
+		<li>博客地址：<a href="http://goodbai.com">goodbai.com</a></li>
+		<li>豆瓣读书：<a href="http://www.douban.com/people/bolf/">bolf</a></li>
+		<li>个人介绍：目前从事龙芯硬件平台Linux技术研发。</li>
+		</ul>
+
+	</div>
+</div>
+
+
+<div id="mechangelog">
+    <h2>更新记录</h2>
+
+　　<p><b>2013-08-19</b></p>
+从该网站成功搭建起到今天，竟然查到59次commits。果然不容易，代码力求短小精悍，JS/CSS/HTML/代码都是一行一行写起，不要一行多余。CSS代码177行，评论和分享功能按需动态载入，博客打开神速，对于一个略微强迫症倾向的人，算是基本满意。今天两篇文章上线（其中部分内容需要再完善）。
+
+　　<p><b>2013-04-15</b></p>
+从上周五开始，废了小一点功夫，这个基于Github Pages搭建的个人Blog终于启动了。发此文以示纪念。
+    <p> 该文直接通过Vim按HTML的语法临摹成，下一步要好好学习markdown等高级文档语言喽，并且也把代码高亮、评论功能等这些基本的组建挂到这个站点。</p>
+</div>
