added feed support

--- a/about.html
+++ b/about.html
@@ -19,8 +19,9 @@ date: 15 April 2013
 
 	<div id="meinfo" >
 		<ul>
-		<li>新浪微博：<a href="http://weibo.com/baigood">GoodbaiA</a></li>
 		<li>博客地址：<a href="http://goodbai.com">goodbai.com</a></li>
+		<li>订阅地址：<a href="http://goodbai.com/atom.xml">RSS</a></li>
+		<li>新浪微博：<a href="http://weibo.com/baigood">GoodbaiA</a></li>
 		<li>豆瓣读书：<a href="http://www.douban.com/people/bolf/">bolf</a></li>
 		<li>个人介绍：目前从事龙芯硬件平台Linux技术研发。</li>
 		</ul>
