black headbar OK, some small style refine.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ position: home
 <div id="blogitem" class="bloglist">
 	<div id="blogimg" class="center_img_m" >
 		{% if post.postimg_s %}
-		<img src="{{ post.postimg_s }}" width="200">
+		<img src="{{ post.postimg_s }}" id="artlogoS" width="120">
 		{% else %}
-		<img src="/images/goodbai_200x133.png" width="200">
+		<img src="/images/goodbai_200x133.png" id="artlogoS" width="120">
 		{% endif %}
 	</div>
 	<div id="blogtext">
