fixed post.title to post.subject,blog name to gaodanbai ,rss added suthor and url info

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: About Goodbai 
+title: 关于高蛋白
 category: about
-tags: [关于Goodbai]
+tags: [Goodbai]
 sharing: false
 comment: true
 published: true 
