fixde home/about page's title error

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-keyword: goodbai
-subject: 首页
+keywords: "goodbai,高蛋白,博客,Linux技术"
+subject: "博客首页"
 position: home
+description: 'Goodbai的个人博客，主要内容包括：Linux技术、系统安全、网络安全、移动互联技术等，欢迎交流。'
 ---
 <div id="homepage">
 {% for post in site.posts %}
