--- a/about.html
+++ b/about.html
@@ -34,10 +34,21 @@ position: about
 <div id="mechangelog">
     <h2>更新记录</h2>
 
+   <p><b>2017-08-08</b></p>
+<p>
+博客没有更新的这几年，老白（这是本人2014年开始新启用的江湖称号）做了一些有意义的事：在上海经营《三人行创业社群》了2年多，组织了近80场线下活动，结识了一批移动互联网领域创业的新朋友。
+</p>	
+<p>
+个人技术也由原来的传统软件行业（linux系统开发）全面转向了移动互联网行业，这两年写过PHP、Javascript、CSS、HTML代码，开发过微信公众号应用、微信小程序、安卓App还有苹果App，简直有一种无所不能的感觉（其实已经快要被干吐了！） 。
+</p>	
+<p>
+最大的一个变化，老白现在是一个商人了！再说明白一点，老白现在是 创业者！！！
+</p>
+　
 　　<p><b>2013-08-19</b></p>
 从该网站成功搭建起到今天，竟然查到59次commits。果然不容易，代码力求短小精悍，JS/CSS/HTML/代码都是一行一行写起，不要一行多余。CSS代码177行，评论和分享功能按需动态载入，博客打开神速，对于一个略微强迫症倾向的人，算是基本满意。今天两篇文章上线（其中部分内容需要再完善）。
 
 　　<p><b>2013-04-15</b></p>
-从上周五开始，废了小一点功夫，这个基于Github Pages搭建的个人Blog终于启动了。发此文以示纪念。
+从上周五开始，花了小一点功夫，这个基于Github Pages搭建的个人Blog终于启动了。发此文以示纪念。
     <p> 该文直接通过Vim按HTML的语法临摹成，下一步要好好学习markdown等高级文档语言喽，并且也把代码高亮、评论功能等这些基本的组建挂到这个站点。</p>
 </div>
